# find-link

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.ipynb_checkpoints/: CLAUDE-checkpoint.md  docker-compose-checkpoint.yml
apps/api/: README.md  pyproject.toml
apps/api/src/graph_explorer_api/: config.py  dependencies.py  graph_clients.py  graph_registry.py  main.py  naming.py
apps/api/src/graph_explorer_api/import_pipeline/: csv_inspector.py  pipeline.py  report.py  structure_inference.py  writer.py
apps/api/src/graph_explorer_api/imports/: jobs.py
apps/api/src/graph_explorer_api/ingest/: csv_inspector.py  jobs.py  pipeline.py  structure_inference.py  writer.py
apps/api/src/graph_explorer_api/repositories/: review_queue_repo.py  search_gateway.py
apps/api/src/graph_explorer_api/routers/: agent_tools.py  entities.py  evidence.py  explorer.py  graphs.py  imports.py  ingestion.py  investigations.py  review.py  risk.py
apps/api/src/graph_explorer_api/search/: index.py
apps/api/src/graph_explorer_api/services/: explanation_service.py  graph_service.py  ingestion_service.py  investigation_service.py  risk_service.py
apps/api/tests/: conftest.py
apps/api/tests/unit/: conftest.py  fakes.py  test_csv_inspector.py  test_evidence_pipeline_e2e.py  test_explorer_router.py  test_graph_registry.py  test_graphs_router.py  test_imports_router.py  test_structure_inference.py  test_writer.py
apps/web/: README.md  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/api/: client.ts  types.ts
apps/web/src/pages/: AgentToolsPage.tsx  ApiConsolePage.tsx  CasesPage.tsx  EntitiesRiskPage.tsx  ExplorerPage.tsx  GraphsListPage.tsx  IngestPage.tsx  InvestigationPage.tsx  ReviewQueuePage.tsx  UploadPage.tsx
apps/web/src/store/: explorerStore.ts
apps/web/src/styles/: tokens.css
apps/worker/: pyproject.toml
apps/worker/src/worker/: main.py  pipeline.py
data/: graphs.json
data/uploads/: graph_0a0d199119de_b4cfb432_dummy_data.csv  graph_d9ab98ae7f1d_7b33bba8_opensanctions-sources-MASTER-2026-05-28 (2).xlsx
deploy/: docker-compose.yml
docs/plans/: 2026-07-02-graph-core-implementation.md
docs/specs/: 2026-07-06-graph-explorer-design.md
docs/superpowers/plans/: 2026-07-02-graph-core-implementation.md
docs/superpowers/specs/: 2026-07-02-graph-core-design.md
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
infra/nebula/: 001_core_schema.ngql  002_intelligence_schema.ngql  003_evidence_schema.ngql  004_investigation_schema.ngql  005_review_and_jobs.ngql  006_indexes.ngql
src/graph_core/: __init__.py  client.py  config.py  identifiers.py  metadata.py
src/graph_core/model/: edge.py
src/graph_core/query/: builder.py
src/graph_core/repository/: edge_operations.py  traversal.py  vertex_operations.py
src/graph_core/storage/: connection.py  executor.py  session.py
tests/integration/: conftest.py  test_smoke.py
tests/unit/: test_client.py  test_config.py  test_identifiers.py  test_metadata.py
tests/unit/model/: test_vertex.py
tests/unit/query/: test_builder.py
tests/unit/repository/: test_edge_operations.py  test_traversal.py  test_vertex_operations.py
tests/unit/schema/: test_registry.py
tests/unit/storage/: fakes.py  test_executor.py  test_serialization.py  test_session.py
(+11 files in other folders)
