[project]
name = "graph-explorer-api"
version = "0.1.0"
description = "Graph Explorer backend: CSV-to-graph import and exploration API over graph-core"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "graph-core",
]

[tool.uv.sources]
graph-core = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
