[project]
name = "graph-explorer-api"
version = "0.1.0"
description = "Graph Explorer backend: CSV-to-graph import and exploration API over graph-core"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "graph-core",
    "ingestion-core",
    "entity-resolution",
    "evidence-core",
    "reasoning-core",
    "intelligence-schema",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "Pillow>=11.0",
    "PyMuPDF>=1.25",
    "python-docx>=1.1",
    "pytesseract>=0.3",
    "pandas>=2.2",
    "python-dotenv>=1.0",
]

[tool.uv.sources]
graph-core = { workspace = true }
ingestion-core = { workspace = true }
entity-resolution = { workspace = true }
evidence-core = { workspace = true }
reasoning-core = { workspace = true }
intelligence-schema = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
