[project]
name = "worker"
version = "0.1.0"
description = "Background job worker for the Graph Intelligence Platform — imports, doc parsing, risk recompute, enrichment"
requires-python = ">=3.10"
dependencies = [
    "graph-core",
    "ingestion-core",
    "entity-resolution",
    "risk-engine",
    "evidence-core",
    "celery[redis]>=5.4",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "intelligence-schema",
]

[tool.uv.sources]
graph-core = { workspace = true }
ingestion-core = { workspace = true }
entity-resolution = { workspace = true }
risk-engine = { workspace = true }
evidence-core = { workspace = true }
intelligence-schema = { workspace = true }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
